--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>design-mode</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>design-mode</name>
-    <description>Demo project for Spring Boot</description>
+    <description>design mode</description>
 
     <properties>
         <java.version>1.8</java.version>
